--- a/Project 3 - Quiz App/style.css
+++ b/Project 3 - Quiz App/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgb(96, 157, 159)
+    background-color: rgb(96, 157, 159);
 }
 
 .card {
@@ -18,23 +18,22 @@ body {
     border-radius: 10px;
 }
 
-.card h1{
+.card h1 {
     font-size: 25px;
     font-weight: 700;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-    padding-bottom: 20px;
 }
 
-.question-card{
+.question-card {
     margin-top: 20px;
 }
 
-#question{
+#question {
     font-size: 22px;
     font-weight: 600;
     margin: 10px 0 20px;
 }
-.ans{
+
+.ans {
     font-size: 15px;
     font-weight: 400;
     background-color: transparent;
@@ -49,7 +48,7 @@ body {
     border-radius: 4px;
 }
 
-#nextbtn{
+#nextbtn {
     margin: 20px auto;
     cursor: pointer;
     background-color: rgb(87, 142, 144);
@@ -63,11 +62,79 @@ body {
     display: block;
 }
 
-#nextbtn:hover{
-    background-color: rgba(87, 142, 144, 0.9);;
+#nextbtn:hover {
+    background-color: rgba(87, 142, 144, 0.9);
+    ;
 }
 
-.ans:hover{
+.ans:hover:not(:disabled) {
     color: white;
     background-color: rgb(71, 127, 129);
+}
+
+.ans:disabled {
+    cursor: no-drop;
+}
+
+.ans.correct {
+    background-color: rgba(82, 255, 82, 0.4);
+    color: black;
+    border-style: groove;
+    border-color: rgba(4, 182, 4, 0.3);
+}
+
+.ans.incorrect {
+    background-color: rgba(255, 20, 20, 0.2);
+    color: black;
+    border-style: groove;
+    border-color: rgba(182, 4, 4, 0.3);
+}
+
+#finalcard {
+    font-size: large;
+    font-weight: 400;
+    margin: 80px auto 50px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    padding: 0 10px 20px 0;
+}
+
+#quesNo {
+    font-weight: 400;
+}
+
+.progress {
+    width: 100%;
+    height: 6px;
+    overflow: hidden;
+    display: block;
+}
+
+.progress-bar {
+    width: 0%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0 5px 5px 0;
+    transition: width 0.5s;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    display: flex;
+    height: 40px;
+    width: 100px;
+    background-color: rgb(87, 142, 144);
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
 }
