--- a/Project 03 - Quiz App/style.css
+++ b/Project 03 - Quiz App/style.css
@@ -1,140 +1,140 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-    background-color: rgb(96, 157, 159);
+  background-color: rgb(96, 157, 159);
 }
 
 .card {
-    width: 90%;
-    max-width: 600px;
-    padding: 30px 20px;
-    margin: 100px auto 0;
-    background-color: white;
-    border-radius: 10px;
+  width: 90%;
+  max-width: 600px;
+  padding: 30px 20px;
+  margin: 100px auto 0;
+  background-color: white;
+  border-radius: 10px;
 }
 
 .card h1 {
-    font-size: 25px;
-    font-weight: 700;
+  font-size: 25px;
+  font-weight: 700;
 }
 
 .question-card {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #question {
-    font-size: 22px;
-    font-weight: 600;
-    margin: 10px 0 20px;
+  font-size: 22px;
+  font-weight: 600;
+  margin: 10px 0 20px;
 }
 
 .ans {
-    font-size: 15px;
-    font-weight: 400;
-    background-color: transparent;
-    border: 2px solid;
-    outline: none;
-    cursor: pointer;
-    width: 100%;
-    text-align: left;
-    padding-left: 15px;
-    margin: 8px 0;
-    height: 45px;
-    border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: transparent;
+  border: 2px solid;
+  outline: none;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+  padding-left: 15px;
+  margin: 8px 0;
+  height: 45px;
+  border-radius: 4px;
 }
 
 #nextbtn {
-    margin: 20px auto;
-    cursor: pointer;
-    background-color: rgb(87, 142, 144);
-    width: 130px;
-    height: 38px;
-    border-radius: 2px;
-    outline: 0;
-    border: 0;
-    font-size: 16px;
-    color: white;
-    display: block;
+  margin: 20px auto;
+  cursor: pointer;
+  background-color: rgb(87, 142, 144);
+  width: 130px;
+  height: 38px;
+  border-radius: 2px;
+  outline: 0;
+  border: 0;
+  font-size: 16px;
+  color: white;
+  display: block;
 }
 
 #nextbtn:hover {
-    background-color: rgba(87, 142, 144, 0.9);
-    ;
+  background-color: rgba(87, 142, 144, 0.9);
 }
 
 .ans:hover:not(:disabled) {
-    color: white;
-    background-color: rgb(71, 127, 129);
+  color: white;
+  background-color: rgb(71, 127, 129);
 }
 
 .ans:disabled {
-    cursor: no-drop;
+  cursor: no-drop;
 }
 
 .ans.correct {
-    background-color: rgba(82, 255, 82, 0.4);
-    color: black;
-    border-style: groove;
-    border-color: rgba(4, 182, 4, 0.3);
+  background-color: rgba(82, 255, 82, 0.4);
+  color: black;
+  border-style: groove;
+  border-color: rgba(4, 182, 4, 0.3);
 }
 
 .ans.incorrect {
-    background-color: rgba(255, 20, 20, 0.2);
-    color: black;
-    border-style: groove;
-    border-color: rgba(182, 4, 4, 0.3);
+  background-color: rgba(255, 20, 20, 0.2);
+  color: black;
+  border-style: groove;
+  border-color: rgba(182, 4, 4, 0.3);
 }
 
 #finalcard {
-    font-size: large;
-    font-weight: 400;
-    margin: 80px auto 50px;
-    display: none;
-    justify-content: center;
-    align-items: center;
+  font-size: large;
+  font-weight: 400;
+  margin: 80px auto 50px;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .head {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-    padding: 0 10px 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+  padding: 0 10px 20px 0;
 }
 
 #quesNo {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .progress {
-    width: 100%;
-    height: 6px;
-    overflow: hidden;
-    display: block;
+  width: 100%;
+  height: 6px;
+  overflow: hidden;
+  display: block;
 }
 
 .progress-bar {
-    width: 0%;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 0 5px 5px 0;
-    transition: width 0.5s;
+  width: 0%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0 5px 5px 0;
+  transition: width 0.5s;
 }
 
 a {
-    text-decoration: none;
-    color: white;
-    display: flex;
-    height: 40px;
-    width: 100px;
-    background-color: rgb(87, 142, 144);
-    border-radius: 4px;
-    align-items: center;
-    justify-content: center;
-    padding: 5px;
+  text-decoration: none;
+  color: white;
+  display: flex;
+  height: 40px;
+  width: 100px;
+  background-color: rgb(87, 142, 144);
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
 }
